# ChangeLog for net-firewall/iptables
# Copyright 2002-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-firewall/iptables/ChangeLog,v 1.24 2004/04/25 16:30:35 aliz Exp $

*iptables-1.2.9-r1 (25 Apr 2004)

  25 Apr 2004; Daniel Ahlberg <aliz@gentoo.org> iptables-1.2.9-r1.ebuild:
  + Depend on virtual/linux-sources.
  + Add static build support.
  + Install all headers, patch contributed by Thomas Jacob <jacob@internet24.de>.
  + l7-filter support, closing #39761.
  + Made initscript run before net, closing #27087.
  + Removed ipforwarding from initscripts as it doesn't belong here and added einfo about it.
  + Removed some old ebuilds.

  21 Apr 2004; Daniel Ahlberg <aliz@gentoo.org> iptables-1.2.7a-r3.ebuild,
  iptables-1.2.7a-r4.ebuild, iptables-1.2.8.ebuild:
  Added IUSE=

  09 Mar 2004; <agriffis@gentoo.org> iptables-1.2.9.ebuild:
  stable on alpha and ia64

  09 Mar 2004; Daniel Ahlberg <aliz@gentoo.org> iptables-1.2.9.ebuild:
  + Added einfo about kernel 2.4.21, closing #25919.
  + Install ip6tables-save and ip6tables-restore, closing #39833.
  + Really enable IPv6, closing #41624.

  28 Jan 2004; <gustavoz@gentoo.org> iptables-1.2.9.ebuild:
  stable on hppa and sparc

  23 Jan 2004; Daniel Ahlberg <aliz@gentoo.org> files/iptables.init, files/ip6tables.init, iptables-1.2.9.ebuild:
  Add reload support to initscript. Closing #21801.
  Added note about saving your rules if upgrading. Closing #35135.
  Unmasked, closing #34910.

  21 Nov 2003; Daniel Ahlberg <aliz@gentoo.org> iptables-1.2.9.ebuild :
  Replae -O0 with -O2, same as the the lack of -O flag problem. Closing #33899.

*iptables-1.2.9 (04 Nov 2003)

  04 Nov 2003; Daniel Ahlberg <aliz@gentoo.org> iptables-1.2.9.ebuild :
  Version bump.

*iptables-1.2.8-r2 (15 Oct 2003)

  15 Oct 2003; John Mylchreest <johnm@gentoo.org>; iptables-1.2.8-r2.ebuild:
  fixes bug #22223

  21 Sep 2003; Matthew Rickard <frogger@gentoo.org> iptables-1.2.8-r1.ebuild: