@@ -1,6 +1,6 @@
 # Copyright 1999-2004 Gentoo Technologies, Inc.
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/net-firewall/iptables/Attic/iptables-1.2.9-r1.ebuild,v 1.2 2004/04/28 05:05:32 vapier Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-firewall/iptables/Attic/iptables-1.2.9-r1.ebuild,v 1.3 2004/05/10 14:07:04 aliz Exp $
 
 inherit eutils flag-o-matic
 
@@ -18,6 +18,10 @@ DEPEND="virtual/linux-sources"
 
 src_unpack() {
 	replace-flags -O0 -O2
+
+	if [ -z `get-flag O` ]; then
+		append-flags -O2
+	fi
 
 	unpack ${A} ; cd ${S}
 
